# speak-anywhere

./: CMakeLists.txt  SPEC.md  install.sh
config/: config.example.json
docs/: README.md  developer-guide.md
docs/journal/: 2026-02-17-io-and-signal-robustness.md  2026-02-17-robust-output-delivery.md
docs/rfcs/01-implemented/: 0001-initial-implementation.md  0002-test-suite.md  0003-robust-output-delivery.md  0004-io-robustness-and-signal-handling.md  0005-platform-abstraction.md  0006-ring-buffer-and-schema-fixes.md
src/client/: ipc_client.cpp  ipc_client.hpp  main.cpp
src/client/platform/: ipc_client.hpp
src/client/platform/linux/: unix_socket_client.cpp  unix_socket_client.hpp
src/daemon/: audio_capture.cpp  audio_capture.hpp  config.cpp  config.hpp  daemon_core.cpp  daemon_core.hpp  event_loop.cpp  event_loop.hpp  ipc_server.cpp  ipc_server.hpp  main.cpp  ring_buffer.hpp  session.cpp  session.hpp  wav_encoder.hpp
src/daemon/output/: clipboard_output.cpp  clipboard_output.hpp  output.hpp  type_output.cpp  type_output.hpp
src/daemon/platform/: audio_capture.hpp  daemonizer.hpp  ipc_server.hpp  platform_paths.hpp  process_detector.hpp  window_manager.hpp
src/daemon/platform/linux/: linux_daemonize.cpp  linux_event_loop.cpp  linux_event_loop.hpp  linux_paths.cpp  pipewire_capture.cpp  pipewire_capture.hpp  procfs_detector.cpp  procfs_detector.hpp  sway_window_manager.cpp  sway_window_manager.hpp  unix_socket_server.cpp  unix_socket_server.hpp  wayland_clipboard_output.cpp  wayland_clipboard_output.hpp  wayland_type_output.cpp  wayland_type_output.hpp
src/daemon/storage/: history_db.cpp  history_db.hpp
src/daemon/sway/: agent_detector.cpp  agent_detector.hpp  ipc.cpp  ipc.hpp  window_info.hpp
src/daemon/whisper/: backend.hpp  lan_backend.cpp  lan_backend.hpp
systemd/: speak-anywhere.service
tests/: test_agent_detector.cpp  test_config.cpp  test_history_db.cpp  test_ipc_protocol.cpp  test_ring_buffer.cpp  test_session.cpp  test_wav_encoder.cpp  test_window_info.cpp
